Fri May  3 13:29:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (INTPTR_MAX, INTPTR_MIN, UINTPTR_MAX): also
	  should be defined when defining intptr_t and uintptr_t.
	  bigdecimal.c requires the former two now.

Fri May  3 13:22:12 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (poll_child_status): fix build error on older mingw.

Fri May  3 00:15:58 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* common.mk: remove timestamps in distclean-ext realclean-ext.

Thu May  2 23:23:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_is_kind_of): skip prepending modules.
	  [ruby-core:54742] [Bug #8357]

	* object.c (rb_class_inherited_p): ditto.
	  [ruby-core:54736] [Bug #8357]

Thu May  2 22:11:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bin/irb: remove dead code from sample/irb.rb.

Thu May  2 17:32:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (copy_ivar_i): get rid of overwriting already copied
	  instance variales.  c.f. [Bug #8276]

Thu May  2 16:55:43 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (id_locals): use cached ID.

	* vm.c (ruby_thread_init): ditto.

	* defs/id.def: add more predefined IDs used in core.

Thu May  2 13:42:42 2013  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 4.7.4 (r8483)
	* test/minitest/*: ditto

Thu May  2 11:32:22 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (poll_child_status): [experimental] set the cause of
	  a child's death to status if its exitcode seems to be an error.

	* test/ruby/test_process.rb (TestProcess#test_no_curdir): maybe now
	  we can test it.

	* test/ruby/test_thread.rb (TestThread#test_thread_timer_and_interrupt):
	  ditto.

Thu May  2 11:24:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/yaml.rb: nodoc EngineManager, add History doc #8344

Wed May  1 21:11:17 2013  Tanaka Akira  <akr@fsij.org>
