@@ -80,6 +80,10 @@
 #include <socks.h>
 #endif
 
+#ifndef HAVE_TYPE_SOCKLEN_T
+typedef int socklen_t;
+#endif
+
 #include "addrinfo.h"
 #include "sockport.h"
 
