@@ -1,3 +1,8 @@
+Fri May  3 13:35:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/{getaddrinfo,getnameinfo}.c: define socklen_t if not
+	  defined, e.g., older VC.
+
 Fri May  3 13:29:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/win32.h (INTPTR_MAX, INTPTR_MIN, UINTPTR_MAX): also
